--- a/UdayChinhamoraWebsite.csproj
+++ b/UdayChinhamoraWebsite.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Views\CountryPages\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
+  </ItemGroup>
+
 </Project>
