--- a/.editorconfig
+++ b/.editorconfig
@@ -56,3 +56,6 @@ csharp_using_directive_placement = outside_namespace:silent
 csharp_prefer_simple_using_statement = true:suggestion
 csharp_prefer_braces = true:silent
 csharp_indent_labels = one_less_than_current
+
+# IDE0021: Use block body for constructor
+csharp_style_expression_bodied_constructors = true
