--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,10 +5,16 @@
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TicketContext": "Server=(localdb)\\MSSQLLocalDB;Database=Tickets; Trusted_Connection=True;MultipleActiveResultSets=true;"
   }
+}
 
     
-  }
+  
 
   
   
